tests/type-errors/safe-fns/adopt_requires_unsafe.cx
struct Resource : @nodrop {
    int data;
};

void adopt_value(Resource* ptr) safe {
    Resource value = @adopt(*ptr);
    value.drop();
}

void Resource::drop(this) safe {
    @unsafe {
        @leak(this);
    };
}
